[package]
name = "travelling_salesman_problem"
version = "0.1.0"
authors = ["Vasco Ferreira <vasco_mmf@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_chacha = "0.2.2"

[lib]
name = "genetic_algorithm"
path = "src/lib/lib.rs"

[[bin]]
name = "salesman"
path = "src/bin/main.rs"